edit: spacing issue with the header video

--- a/src/componens/style.css
+++ b/src/componens/style.css
@@ -8,10 +8,9 @@ body {
   width: 100%;
   height: 100vh;
 }
-
-video {
-  width: 100%;
-  height: 100%;
+.videoHeader {
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
 }
 
